[tool.poetry]
name = "pyheroku-badge"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Denys Halenok <denys.halenok@gmail.com>"]
readme = "README.md"
packages = [{include = "pyheroku_badge"}]

[tool.poetry.dependencies]
fastapi = "^0.109.1"
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
